added new links and social links in footer on all pages

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -232,10 +232,10 @@
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="https://d3c33hcgiwev3.cloudfront.net/_4999bb1c153079dc31f49106df966643_aboutus.html?Expires=1459209600&amp;Signature=dEzCnF0i21me9SnSyvgZunLBHlpwvKByDxc3NfQd3fgFJAnlZUcwtbCKF4~YIgBdgkDXeVa2NTfamyl1J9MqMQWRBYm7YRlE3aG-oKaHbyuBcD3AEhJ1sQvgds-0fiOsuOmVGvbiQy6TpvvjGHUZB4G5Sa4a99pL1ng8GeieZDk_&amp;Key-Pair-Id=APKAJLTNE6QMUY6HBC5A#">Home</a></li>
-                        <li><a href="https://d3c33hcgiwev3.cloudfront.net/_4999bb1c153079dc31f49106df966643_aboutus.html?Expires=1459209600&amp;Signature=dEzCnF0i21me9SnSyvgZunLBHlpwvKByDxc3NfQd3fgFJAnlZUcwtbCKF4~YIgBdgkDXeVa2NTfamyl1J9MqMQWRBYm7YRlE3aG-oKaHbyuBcD3AEhJ1sQvgds-0fiOsuOmVGvbiQy6TpvvjGHUZB4G5Sa4a99pL1ng8GeieZDk_&amp;Key-Pair-Id=APKAJLTNE6QMUY6HBC5A#">About</a></li>
-                        <li><a href="https://d3c33hcgiwev3.cloudfront.net/_4999bb1c153079dc31f49106df966643_aboutus.html?Expires=1459209600&amp;Signature=dEzCnF0i21me9SnSyvgZunLBHlpwvKByDxc3NfQd3fgFJAnlZUcwtbCKF4~YIgBdgkDXeVa2NTfamyl1J9MqMQWRBYm7YRlE3aG-oKaHbyuBcD3AEhJ1sQvgds-0fiOsuOmVGvbiQy6TpvvjGHUZB4G5Sa4a99pL1ng8GeieZDk_&amp;Key-Pair-Id=APKAJLTNE6QMUY6HBC5A#">Menu</a></li>
-                        <li><a href="https://d3c33hcgiwev3.cloudfront.net/_4999bb1c153079dc31f49106df966643_aboutus.html?Expires=1459209600&amp;Signature=dEzCnF0i21me9SnSyvgZunLBHlpwvKByDxc3NfQd3fgFJAnlZUcwtbCKF4~YIgBdgkDXeVa2NTfamyl1J9MqMQWRBYm7YRlE3aG-oKaHbyuBcD3AEhJ1sQvgds-0fiOsuOmVGvbiQy6TpvvjGHUZB4G5Sa4a99pL1ng8GeieZDk_&amp;Key-Pair-Id=APKAJLTNE6QMUY6HBC5A#">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutUs.html">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-6 col-sm-5">
@@ -250,14 +250,14 @@
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="col-xs-12 col-sm-4">
-                    <div class="nav navbar-nav" style="padding: 40px 10px;">
-                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                        <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                <div class="col-xs-6 col-sm-3">
+                    <div style="padding: 40px 10px;">
+                        <a class="btn btn-social-icon btn-linkedin" href="https://rs.linkedin.com/in/igor-todorovic-14b2a766" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/igor.todorovic.96" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
