--- a/contactus.html
+++ b/contactus.html
@@ -202,13 +202,13 @@
     <footer class="row-footer">
         <div class="container">
             <div class="row">          
-                <div class="col-xs-5 col-xm-offset-1 col-sm-2 col-sm-offset-1">
+                <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="https://d396qusza40orc.cloudfront.net/phoenixassets/web-frameworks/index.html#">Home</a></li>
-                        <li><a href="https://d396qusza40orc.cloudfront.net/phoenixassets/web-frameworks/index.html#">About</a></li>
-                        <li><a href="https://d396qusza40orc.cloudfront.net/phoenixassets/web-frameworks/index.html#">Menu</a></li>
-                        <li><a href="https://d396qusza40orc.cloudfront.net/phoenixassets/web-frameworks/index.html#">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutUs.html">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-6 col-sm-6">
@@ -224,12 +224,12 @@
                 </div>
                 <div class="col-xs-6 col-sm-3">
                     <div style="padding: 40px 10px;">
-                        <a class="btn btn-social-icon btn-linkedin" href="http://linkedin.com"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="https://rs.linkedin.com/in/igor-todorovic-14b2a766" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/igor.todorovic.96" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
-                        <a class="btn btn-social-icon btn-envelope" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
