--- a/aboutUs.html
+++ b/aboutUs.html
@@ -77,7 +77,11 @@
         <div class="jumbotron parallax parallaxPic">
             <div class="container">
                 <div class="row row-header">
-                    <div class="col-xs-12 col-sm-9">
+                    <div class="col-xs-12 col-sm-2 col-sm-push-9">
+                            <p style="padding-bottom: 10px;"></p>
+                            <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-sm-pull-2">
                         <h1 class="blueColor">Ristorante con Fusion</h1>
                         <p style="padding:40px;"></p>
                         <blockquote class="blueColor borderRadius">
@@ -86,10 +90,6 @@
                                 <cite title="Source Title">The Wit and Wisdom of Alberto, Food Books, 2012</cite>                                
                             </footer>
                         </blockquote>
-                    </div>
-                    <div class="col-xs-12 col-sm-2">
-                        <p style="padding-bottom: 10px;"></p>
-                        <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                     </div>
                 </div>
             </div>
