--- a/contactus.html
+++ b/contactus.html
@@ -77,14 +77,14 @@
 
         <div class="container">
             <div class="row row-header">
-                <div class="col-xs-12 col-sm-9">
+                <div class="col-xs-12 col-sm-2 col-sm-push-9">
+                        <p style="padding-bottom: 10px;"></p>
+                        <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+                    </div>
+                <div class="col-xs-12 col-sm-9 col-sm-pull-2">
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div class="col-xs-12 col-sm-2">
-                    <p style="padding-bottom: 10px;"></p>
-                    <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                 </div>
             </div>
         </div>
