--- a/contactus.html
+++ b/contactus.html
@@ -114,10 +114,10 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
+		              <i class="fa fa-phone"></i>: +381 60 3881925<br>
+		              <i class="fa fa-fax"></i>: +999 999 4321<br>
 		              <i class="fa fa-envelope"></i>: 
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        <a href="mailto:igor333m@yahoo.com">confusion@food.net</a>
 		           </address>
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-1">
@@ -126,7 +126,7 @@
             <div class="col-xs-12 col-sm-11 col-sm-offset-1">
                 <div class="btn-group" role="group" aria-label="...">
                     <a role="button" class="btn btn-primary" href="tel:+381603881925"> <i class="fa fa-phone"></i> Call</a>
-                    <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
+                    <a role="button" class="btn btn-info" href="skype:igor333m?call"><i class="fa fa-skype"></i> Skype</a>
                     <a role="button" class="btn btn-success" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></span> Email</a>
                 </div>
             </div>
