mail links changed

--- a/contactus.html
+++ b/contactus.html
@@ -117,7 +117,7 @@
 		              <i class="fa fa-phone"></i>: +381 60 3881925<br>
 		              <i class="fa fa-fax"></i>: +999 999 4321<br>
 		              <i class="fa fa-envelope"></i>: 
-                        <a href="mailto:igor333m@yahoo.com">confusion@food.net</a>
+                        <a href="mailto:igor333m@gmail.com">igor333m@gmail.com</a>
 		           </address>
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-1">
@@ -127,7 +127,7 @@
                 <div class="btn-group" role="group" aria-label="...">
                     <a role="button" class="btn btn-primary" href="tel:+381603881925"> <i class="fa fa-phone"></i> Call</a>
                     <a role="button" class="btn btn-info" href="skype:igor333m?call"><i class="fa fa-skype"></i> Skype</a>
-                    <a role="button" class="btn btn-success" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></span> Email</a>
+                    <a role="button" class="btn btn-success" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></span> Email</a>
                 </div>
             </div>
         </div>
@@ -217,9 +217,9 @@
                       121, Clear Water Bay Road<br>
                       Clear Water Bay, Kowloon<br>
                       HONG KONG<br>
-                      <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Tel.: +852 1234 5678<br>
-                      <i class="fa fa-fax"></i> Fax: +852 8765 4321<br>
-                      <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+                      <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Tel.: +381 60 3881925<br>
+                      <i class="fa fa-fax"></i> Fax: +999 999 4321<br>
+                      <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email: <a href="mailto:igor333m@gmail.com">igor333m@gmail.com</a>
                    </address>
                 </div>
                 <div class="col-xs-6 col-sm-3">
@@ -229,12 +229,12 @@
                         <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
-                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></a>
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align="center">&copy; Copyright 2015 Ristorante Con Fusion</p>
+                    <p align="center">&copy; Copyright 2015 Ristorante</p>
                 </div>
             </div>
         </div>
