--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12 col-sm-9">
+                            <br>
                             <input type="submit" value="Reserve" class="btn btn-primary">
                         </div>
                     </div>
@@ -295,9 +296,9 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Tel.: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i> Fax: +852 8765 4321<br>
-		              <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Tel.: +381 60 3881925<br>
+		              <i class="fa fa-fax"></i> Fax: +999 999 4321<br>
+		              <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email: <a href="mailto:igor333m@yahoo.com">igor333m@yahoo.com</a>
 		           </address>
                 </div>
                 <div class="col-xs-6 col-sm-3">
@@ -307,12 +308,12 @@
                         <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
-                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></a>
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align="center">&copy; Copyright 2015 Ristorante Con Fusion</p>
+                    <p align="center">&copy; Copyright 2015 Ristorante</p>
                 </div>
             </div>
         </div>
