--- a/aboutUs.html
+++ b/aboutUs.html
@@ -243,10 +243,10 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
+		              <i class="fa fa-phone"></i>: +381 60 3881925<br>
+		              <i class="fa fa-fax"></i>: +999 999 4321<br>
 		              <i class="fa fa-envelope"></i>: 
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        <a href="mailto:igor333m@yahoo.com">igor333m@yahoo.com</a>
 		           </address>
                 </div>
                 <div class="col-xs-6 col-sm-3">
@@ -256,12 +256,12 @@
                         <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
-                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@yahoo.com"><i class="fa fa-envelope-o"></i></a>
+                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align="center">&copy; Copyright 2015 Ristorante Con Fusion</p>
+                    <p align="center">&copy; Copyright 2015 Ristorante</p>
                 </div>
             </div>
         </div>
