pictures in media top align

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <div class="media">
-                    <div class="media-left media-middle">
+                    <div class="media-left media-top">
                         <a href="#">
                             <img src="img/uthappizza.png" alt="Uthappizza" class="media-object img-thumbnail">
                         </a>
@@ -166,7 +166,7 @@
                             <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
                             <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
                     </div>
-                    <div class="media-right media-middle">
+                    <div class="media-right media-top">
                         <a href="#">
                             <img src="img/buffet.png" alt="Buffet" class="media-object img-thumbnail">
                         </a>
@@ -182,7 +182,7 @@
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <div class="media">
-                    <div class="media-left media-middle">
+                    <div class="media-left media-top">
                         <a href="#">
                             <img src="img/cevapi.jpg" alt="Buffet" class="media-object img-thumbnail">
                         </a>
@@ -203,7 +203,7 @@
             </div>
             <div class="col-xs-12 col-sm-9">
                 <div class="media">
-                    <div class="media-left media-middle">
+                    <div class="media-left media-top">
                         <a href="#">
                             <img src="img/alberto.png" alt="Buffet" class="media-object img-thumbnail">
                         </a>
