added title attr, small changes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </ol>
             </div>
             <div class="col-xs-12 col-sm-3">
-                <a class="btn btn-warning btn-block" href="#scroll" role="button">Reserve Table</a>
+                <a class="btn btn-warning btn-block" href="#scroll" role="button" title="Click here to make a reservation.">Reserve Table</a>
             </div>
         </div>
         <div class="row row-content">
@@ -142,7 +142,7 @@
                     <div class="media-body">
                         <h2 class="media-heading">Uthappiza
                             <span class="label label-danger label-xs">Hot</span>
-                            <span class="badge">$4.99</span>
+                            <span class="badge" title="This meal has a very good price!">$4.99</span>
                         </h2>
                             <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                             <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
