html validation is done

--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <html lang="en">
     <head>
     <!-- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"> -->
-    <meta charset="utf-16">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Ristorante Con Fusion</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/bootstrap-social.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- The above 3 meta tags *must* come first in the head; any other head 
+         content must come *after* these tags -->
+    <title>Ristorante Con Fusion</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
         <!-- Slick Carousel -->
-        <link rel="stylesheet" href="js/slick/slick.css">
-        <link rel="stylesheet" href="js/slick/slick-theme.css">
-        <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="js/slick/slick.css">
+    <link rel="stylesheet" href="js/slick/slick-theme.css">
+    <link href="css/style.css" rel="stylesheet">
 
     </head>
 
-<body cz-shortcut-listen="true">
+<body>
 
     <header>
         <!-- Main component for a primary marketing message or call to action -->
@@ -29,7 +31,7 @@
                 <div class="navbar-header">
 
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
-                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25px"></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="nav navbar-nav">
@@ -60,7 +62,7 @@
                             <label class="checkbox">
                                 <input type="checkbox" class="form-control" name="rememberme"> Remember Me
                             </label>
-                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin"></input>
+                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
                         </div>
 
                     </form>
@@ -130,7 +132,7 @@
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
-                <h3 align="center">Our Lipsmacking Culinary Creations</h3>
+                <h3 class="center">Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <div class="media">
@@ -155,7 +157,7 @@
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
-                <h3 align="center">This Month's Promotions</h3>
+                <h3 class="center">This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
                 <div class="media">
@@ -178,7 +180,7 @@
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
-                <h3 align="center">New Promotions</h3>
+                <h3 class="center">New Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <div class="media">
@@ -199,7 +201,7 @@
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
-                <h3 align="center">Meet our Culinary Specialists</h3>
+                <h3 class="center">Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
                 <div class="media">
@@ -221,13 +223,13 @@
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <!-- ID scroll is connected with reserve table button -->
-                <h3 align="center" id="scroll">Reserve a table</h3>
+                <h3 class="center" id="scroll">Reserve a table</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
                 <p style="padding:20px;"></p>
                 <form method="get">
                     <div class="form-group">
-                        <label for="numofguests" class="col-xs-12 col-sm-3 control-label">Number of guests </label>
+                        <label class="col-xs-12 col-sm-3 control-label">Number of guests </label>
                         <div class="col-xs-12 col-sm-9">
                             <label class="radio-inline">
                             <input type="radio" name="numofguests" id="inlineRadio1" value="option1"> 1
@@ -252,7 +254,7 @@
                     <div class="form-group">
                         <br>
                         <br>
-                        <label for="dateandtime" class="col-xs-12 col-sm-3 control-label">Date and time</label>
+                        <label class="col-xs-12 col-sm-3 control-label">Date and time</label>
                         <div class="col-xs-12 col-sm-9">
                             <input type="date" name="date">
                             <input type="time" name="time">
@@ -263,7 +265,6 @@
                             <br>
                             <input type="submit" value="Reserve" class="btn btn-primary">
                         </div>
-                    </div>
                     </div>
                 </form>
             </div>
@@ -313,7 +314,7 @@
                 </div>
                 <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align="center">&copy; Copyright 2015 Ristorante</p>
+                    <p class="center">&copy; Copyright 2015 Ristorante</p>
                 </div>
             </div>
         </div>
