--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
         <!-- Bootstrap -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/bootstrap-social.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link href="css/style.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,7 +24,7 @@
     <![endif]-->
 </head>
 
-<body cz-shortcut-listen="true">
+<body>
     <header>
         <!-- Main component for a primary marketing message or call to action -->
         <nav class="navbar-fixed-top navbar-default" role="navigation">
@@ -32,7 +32,7 @@
                 <div class="navbar-header">
 
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
-                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25px"></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="nav navbar-nav">
@@ -62,7 +62,7 @@
                             <input type="password" class="form-control" placeholder="Password" name="password">
                             <label class="checkbox" style="display: inline;">Remember Me</label>
                             <input type="checkbox" class="form-control" name="rememberme">
-                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin"></input>
+                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
                         </div>
 
                     </form>
@@ -85,9 +85,9 @@
                         <p style="padding:40px;"></p>
                         <blockquote class="blueColor borderRadius">
                             <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                            <footer class="blueColor"><span>Alberto Somayya,</span>
+                            <small class="blueColor"><span>Alberto Somayya,</span>
                                 <cite title="Source Title">The Wit and Wisdom of Alberto, Food Books, 2012</cite>                                
-                            </footer>
+                            </small>
                         </blockquote>
                     </div>
                 </div>
@@ -261,15 +261,13 @@
                 </div>
                 <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align="center">&copy; Copyright 2015 Ristorante</p>
+                    <p class="center">&copy; Copyright 2015 Ristorante</p>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./Ristorante Con Fusion_ About Us_files/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./Ristorante Con Fusion_ About Us_files/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 
 </body></html>
