--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
@@ -29,7 +29,7 @@
                 <div class="navbar-header">
 
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
-                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25px"></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="nav navbar-nav">
@@ -60,7 +60,7 @@
                             <label class="checkbox">
                                 <input type="checkbox" class="form-control" name="rememberme"> Remember Me
                             </label>
-                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin"></input>
+                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
                         </div>
 
                     </form>
@@ -127,7 +127,7 @@
                 <div class="btn-group" role="group" aria-label="...">
                     <a role="button" class="btn btn-primary" href="tel:+381603881925"> <i class="fa fa-phone"></i> Call</a>
                     <a role="button" class="btn btn-info" href="skype:igor333m?call"><i class="fa fa-skype"></i> Skype</a>
-                    <a role="button" class="btn btn-success" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></span> Email</a>
+                    <a role="button" class="btn btn-success" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i> Email</a>
                 </div>
             </div>
         </div>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align="center">&copy; Copyright 2015 Ristorante</p>
+                    <p class="center">&copy; Copyright 2015 Ristorante</p>
                 </div>
             </div>
         </div>
