css validation is done

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -60,8 +60,9 @@
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="Email" name="email">
                             <input type="password" class="form-control" placeholder="Password" name="password">
-                            <label class="checkbox" style="display: inline;">Remember Me</label>
-                            <input type="checkbox" class="form-control" name="rememberme">
+                            <label class="checkbox">
+                                <input type="checkbox" class="form-control" name="rememberme"> Remember Me
+                            </label>
                             <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
                         </div>
 
