inserted collapse accordion

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -205,6 +205,55 @@
                 <p style="padding:20px;"></p>
             </div>
        </div>
+       <div class="row row-content">
+           <div class="col-xs-12">
+               <h2>We are at different places!</h2>
+               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingOne">
+                      <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          121, Clear Water Bay Road Clear Water Bay, Hong Kong
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                      <div class="panel-body">
+                        The ultimate all-you-can-eat dining experience. The concept is to serve a wide variety of different cuts of meat, chicken and seafood in succession, to each diner individually right at their table, thus there is no traditional menu, as Braza features an all-you-can-eat continuous tableside service.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                      <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Kralja Aleksandra 189, Belgrage, Serbia
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                      <div class="panel-body">
+                        Lunch, Dinner, Accepts American Express, Accepts Mastercard, Accepts Visa, Free Wifi, Parking Available, Private Dining, Reservations, Seating, Serves Alcohol, Valet Parking, Validated Parking, Waitstaff, Wheelchair Accessible, Wine and Beer.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                      <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          189 The Grove Dr Ste Y-80 Los Angeles, CA 90036
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                      <div class="panel-body">
+                        No other city in the world boasts quite as eclectic a dining scene as Los Angeles. Opulent restaurants opened by celebrity chefs such as Gray Kunz and Joël Robuchon are just a stone’s throw from humble local eateries doling out thin noodles and some of the best wonton shrimp dumplings, or delicious slices of tender barbecued meat piled atop bowls of fragrant jasmine rice. One of the key lessons here is never judge a book by its cover—the most unassuming eateries are often the ones that provide the most memorable meals.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+           </div>
+       </div>
 
        <!--     Table    -->
 
