Added semantic tags (section, aside, nav, article) to all pages

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <a class="btn btn-warning btn-block" href="#scroll" role="button" title="Click here to make a reservation.">Reserve Table</a>
             </div>
         </div>
-        <div class="row row-content">
+        <section class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
                 <h3 class="center">Our Lipsmacking Culinary Creations</h3>
@@ -150,10 +150,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
 
-        <div class="row row-content">
+        <section class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <h3 class="center">This Month's Promotions</h3>
@@ -174,9 +174,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="row row-content">
+        <section class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
                 <h3 class="center">New Promotions</h3>
@@ -195,9 +195,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="row row-content">
+        <section class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <h3 class="center">Meet our Culinary Specialists</h3>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <div class="row">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
@@ -281,7 +281,7 @@
     <footer class="row-footer">
         <div class="container">
             <div class="row">          
-                <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
+                <nav class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
@@ -289,7 +289,7 @@
                         <li><a href="#">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
-                </div>
+                </nav>
                 <div class="col-xs-6 col-sm-6">
                     <h5>Our Address</h5>
                     <address>
