--- a/contactus.html
+++ b/contactus.html
@@ -202,7 +202,7 @@
     <footer class="row-footer">
         <div class="container">
             <div class="row">          
-                <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
+                <nav class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
@@ -210,7 +210,7 @@
                         <li><a href="#">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
-                </div>
+                </nav>
                 <div class="col-xs-6 col-sm-6">
                     <h5>Our Address</h5>
                     <address>
