--- a/contactus.html
+++ b/contactus.html
@@ -24,53 +24,53 @@
 </head>
 
 <body>
-        <nav class="navbar-fixed-top navbar-default" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
+    <nav class="navbar-fixed-top navbar-default" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
 
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
-                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25"></a>
-                </div>
-                <div class="collapse navbar-collapse" id="mainNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
-                        <li><a href="aboutUs.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About Us</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                             role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span> 
-                              Menu 
-                             <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Appetizers</a></li>
-                                <li><a href="#">Main Courses</a></li>
-                                <li><a href="#">Desserts</a></li>
-                                <li><a href="#">Drinks</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Specials</li>
-                                <li><a href="#">Lunch Buffet</a></li>
-                                <li><a href="#">Weekend Brunch</a></li>
-                            </ul>
-                        </li>
-                        <li class="active"><a href="contactus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>
-                    </ul>
-                    <form class="navbar-form navbar-right" role="search" method="post">
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email" name="email">
-                            <input type="password" class="form-control" placeholder="Password" name="password">
-                            <label class="checkbox">
-                                <input type="checkbox" class="form-control" name="rememberme"> Remember Me
-                            </label>
-                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
-                        </div>
-
-                    </form>
-                    <!-- <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul> -->
-                </div>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
+                <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25"></a>
             </div>
-        </nav>
+            <div class="collapse navbar-collapse" id="mainNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+                    <li><a href="aboutUs.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About Us</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                         role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span> 
+                          Menu 
+                         <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Appetizers</a></li>
+                            <li><a href="#">Main Courses</a></li>
+                            <li><a href="#">Desserts</a></li>
+                            <li><a href="#">Drinks</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li class="dropdown-header">Specials</li>
+                            <li><a href="#">Lunch Buffet</a></li>
+                            <li><a href="#">Weekend Brunch</a></li>
+                        </ul>
+                    </li>
+                    <li class="active"><a href="contactus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>
+                </ul>
+                <form class="navbar-form navbar-right" role="search" method="post">
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email" name="email">
+                        <input type="password" class="form-control" placeholder="Password" name="password">
+                        <label class="checkbox">
+                            <input type="checkbox" class="form-control" name="rememberme"> Remember Me
+                        </label>
+                        <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
+                    </div>
+
+                </form>
+                <!-- <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul> -->
+            </div>
+        </div>
+    </nav>
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -91,7 +91,7 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content-breadcrumbs">
             <div class="col-xs-12">
                <ul class="breadcrumb">
                    <li><a href="index.html">Home</a></li>
