added title tag on nav logo after cloning repo to another computer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="navbar-header">
 
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar" aria-expanded="false">Menu</button>
-                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo" height="25"></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/fusionlogo.png" alt="fusion logo navigating to homepage" title="Fusion Logo" height="25"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="nav navbar-nav">
