--- a/contactus.html
+++ b/contactus.html
@@ -229,7 +229,7 @@
                         <a class="btn btn-social-icon btn-google-plus" href="http://www.google.com"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/igor333m" target="_blank"><i class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-yahoo" href="http://yahoo.com/"><i class="fa fa-yahoo"></i></a>
-                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                        <!-- The email address usually opens up on the default email client on the user's computer which they might not use. This defeats the whole purpose. Providing your email address in your Web page directly as text or a hyperlink will expose your email address. Bots or spam crawlers can be used to search the Web to pick up email addresses for spam. You should avoid this if possible and use contact forms instead. -->                        <a class="btn btn-social-icon btn-envelope" href="mailto:igor333m@gmail.com"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-12">
