--- a/contactus.html
+++ b/contactus.html
@@ -14,13 +14,9 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+        <!-- Google fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -82,7 +78,7 @@
                         <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                     </div>
                 <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1 class="montserrat">Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
