--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0077)https://d396qusza40orc.cloudfront.net/phoenixassets/web-frameworks/index.html -->
 <html lang="en">
     <head>
     <!-- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"> -->
@@ -19,6 +18,8 @@
     <link rel="stylesheet" href="js/slick/slick.css">
     <link rel="stylesheet" href="js/slick/slick-theme.css">
     <link href="css/style.css" rel="stylesheet">
+        <!-- Google fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 
     </head>
 
@@ -82,7 +83,7 @@
                                 <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                             </div>
                             <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                                <h1>Ristorante con Fusion</h1>
+                                <h1 class="montserrat">Ristorante con Fusion</h1>
                                 <p style="padding:40px;"></p>
                                 <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                             </div>
