--- a/aboutUs.html
+++ b/aboutUs.html
@@ -97,7 +97,8 @@
             <div class="col-xs-12">
                 <!-- Breadcrumbs -->
                 <ol class="breadcrumb">
-                    <li class="active">Home</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active">About Us</li>
                 </ol>
             </div>
             <div class="col-xs-12">
