text color on parallax changed, Belgrade spell correction

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -78,11 +78,11 @@
                             <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
                     </div>
                     <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                        <h1 class="blueColor montserrat">Ristorante con Fusion</h1>
+                        <h1 class="textOnParallax montserrat">Ristorante con Fusion</h1>
                         <p style="padding:40px;"></p>
-                        <blockquote class="blueColor borderRadius">
+                        <blockquote class="textOnParallax borderRadius">
                             <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                            <small class="blueColor"><span>Alberto Somayya,</span>
+                            <small class="textOnParallax"><span>Alberto Somayya,</span>
                                 <cite title="Source Title">The Wit and Wisdom of Alberto, Food Books, 2012</cite>                                
                             </small>
                         </blockquote>
@@ -228,7 +228,7 @@
                             <div class="panel-heading" role="tab" id="headingTwo">
                               <h4 class="panel-title">
                                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                  Kralja Aleksandra 189, Belgrage, Serbia
+                                  Kralja Aleksandra 189, Belgrade, Serbia
                                 </a>
                               </h4>
                             </div>
