--- a/index.html
+++ b/index.html
@@ -55,24 +55,44 @@
                         </li>
                         <li><a href="contactus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>
                     </ul>
-                    <form class="navbar-form navbar-right" method="post">
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email" name="email">
-                            <input type="password" class="form-control" placeholder="Password" name="password">
-                            <label class="checkbox">
-                                <input type="checkbox" class="form-control" name="rememberme"> Remember Me
-                            </label>
-                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
-                        </div>
+                    <!-- Login button that opens the modal -->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                        </li>
+                    </ul>
 
-                    </form>
-                    <!-- <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul> -->
                 </div>
             </div>
         </nav>
+
+        <!-- Modal -->
+        <div id="loginModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+            <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Login </h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form-inline" method="post">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email" name="email">
+                                <input type="password" class="form-control" placeholder="Password" name="password">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" name="rememberme"> Remember Me
+                                    </label>
+                                </div>
+                                <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
+                                <button type="button" class="btn btn-default btn-sm"
+                       data-dismiss="modal">Cancel</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="jumbotron">
             <div class="container">
                 <div class="row row-header">
