--- a/aboutUs.html
+++ b/aboutUs.html
@@ -22,7 +22,6 @@
 
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="200">
     <header>
-        <!-- Main component for a primary marketing message or call to action -->
         <nav class="navbar-fixed-top navbar-default" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -52,45 +51,68 @@
                         </li>
                         <li><a href="contactus.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>
                     </ul>
-                    <form class="navbar-form navbar-right" role="search" method="post">
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email" name="email">
-                            <input type="password" class="form-control" placeholder="Password" name="password">
-                            <label class="checkbox">
-                                <input type="checkbox" class="form-control" name="rememberme"> Remember Me
-                            </label>
-                            <input type="submit" value="Sign in" class="btn btn-primary" name="signin">
-                        </div>
+                    <!-- Login button that opens the modal -->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                        </li>
+                    </ul>
 
-                    </form>
-                    <!-- <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul> -->
                 </div>
             </div>
         </nav>
-        <div class="jumbotron parallax parallaxPic">
-            <div class="container">
-                <div class="row row-header">
-                    <div class="col-xs-12 col-sm-2 col-sm-push-9">
-                            <p style="padding-bottom: 10px;"></p>
-                            <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+
+        <!-- Modal -->
+        <div id="loginModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+            <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Login </h4>
                     </div>
-                    <div class="col-xs-12 col-sm-9 col-sm-pull-2">
-                        <h1 class="textOnParallax montserrat">Ristorante con Fusion</h1>
-                        <p style="padding:40px;"></p>
-                        <blockquote class="textOnParallax borderRadius">
-                            <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                            <small class="textOnParallax"><span>Alberto Somayya,</span>
-                                <cite title="Source Title">The Wit and Wisdom of Alberto, Food Books, 2012</cite>                                
-                            </small>
-                        </blockquote>
+                    <div class="modal-body">
+                        <form class="form-inline" method="post">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email" name="email">
+                                <input type="password" class="form-control" placeholder="Password" name="password">
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="rememberme"> Remember Me
+                                </label>
+                            </div>
+                            <br><br>
+                            <input type="submit" value="Sign in" class="btn btn-primary btn-sm" name="signin">
+                            <button type="button" class="btn btn-default btn-sm"
+                   data-dismiss="modal">Cancel</button>
+                            
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <div class="jumbotron parallax parallaxPic">
+        <div class="container">
+            <div class="row row-header">
+                <div class="col-xs-12 col-sm-2 col-sm-push-9">
+                        <p style="padding-bottom: 10px;"></p>
+                        <img src="img/fusionlogo.png" alt="Fusion logo" class="img-circle img-responsive">
+                </div>
+                <div class="col-xs-12 col-sm-9 col-sm-pull-2">
+                    <h1 class="textOnParallax montserrat">Ristorante con Fusion</h1>
+                    <p style="padding:40px;"></p>
+                    <blockquote class="textOnParallax borderRadius">
+                        <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                        <small class="textOnParallax"><span>Alberto Somayya,</span>
+                            <cite title="Source Title">The Wit and Wisdom of Alberto, Food Books, 2012</cite>                                
+                        </small>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
             <!-- Breadcrumbs -->
         <div class="row row-content-breadcrumbs">
